# Base64_Cpp

./: .gitignore  CMakeLists.txt  README.md  base64.cpp  main.cpp  writer.py
include/: base64.h
src/: base64.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
utils/: writer.py
